--- a/index.html
+++ b/index.html
@@ -43,49 +43,7 @@
             </div>
         </div>
         <!-- Spinner End -->
-        <!-- <div class="container-fluid mangos">
-            <div class="mangooos">
-                <div class="mango mango1">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango2">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango3">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango4">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango5">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango6">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango7">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango8">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango9">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango10">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango11">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango12">
-                    <img src="./img/natural.png" alt="">
-                </div>
-                <div class="mango mango13">
-                    <img src="./img/natural.png" alt="">
-                </div>
-            </div>
-        </div> -->
+
         <style>
 
         </style>
@@ -390,6 +348,112 @@
         </div>
         <!-- Pricing End -->
 
+
+        <!-- About Start -->
+        <div class="container-xxl py-5">
+            <div class="container px-lg-5">
+                <div class="row g-5 align-items-center">
+                    <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="section-title position-relative mb-4 pb-4">
+                            <h5 class="mb-2">Additional Services</h5>
+                            <h2 class="mb-2">We Also provided</h2>
+                        </div>
+
+                        <p class="mb-2">Apartments: Our apartments epitomize modern living, blending luxury,
+                            functionality, and community. Each unit is meticulously designed to provide comfort and
+                            style, fostering a sense of belonging.</p>
+                        <p class="mb-2">Villas: Our villas offer a harmonious blend of space, elegance, and privacy.
+                            With thoughtful layouts and premium amenities, they provide an exceptional living
+                            experience.</p>
+                        <p class="mb-2">Construction: Our construction services are characterized by precision, quality,
+                            and sustainability. We bring architectural visions to life with a commitment to excellence
+                            in every detail.</p>
+                        <p class="mb-2">Commercial Plots: Our commercial Plots are vibrant hubs of business and
+                            innovation. They are designed to foster growth, with flexible spaces and strategic locations
+                            that cater to diverse industries.</p>
+
+                        <div class="row g-3 mt-3">
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
+
+                                <button class="read-more"> <a href="./about.html">Know More</a></button>
+                            </div>
+
+
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/additional-services.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- About End -->
+
+        <div class="container-xxl py-5 business">
+            <div class="container px-lg-5">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="clients">
+                            <h3> <span>3+</span> </h3>
+                            <h5>Year In Business</h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="clients">
+                            <h3> <span>1000+</span> </h3>
+                            <h5>Happy Clients</h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="clients">
+                            <h3> <span>10+</span> </h3>
+                            <h5>Projects Completed</h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="clients">
+                            <h3> <span>50+</span> </h3>
+                            <h5>Trained Stuff</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <style>
+            .business {}
+
+            .business .col-lg-3 {
+                padding: 0;
+            }
+
+            .business .col-lg-3:nth-child(1) .clients {
+                background-color: #cb4154;
+                padding: 3rem;
+                color: white;
+                text-align: center;
+            }
+
+            .business .col-lg-3:nth-child(2) .clients {
+                background-color: white;
+                padding: 3rem;
+                color: white;
+                text-align: center;
+            }
+
+            .business .col-lg-3:nth-child(3) .clients {
+                background-color: #96ff00;
+                padding: 2.3rem;
+                color: white;
+                text-align: center;
+            }
+
+            .business .col-lg-3:nth-child(4) .clients {
+                background-color: #cb4154;
+                padding: 3rem;
+                color: white;
+                text-align: center;
+            }
+        </style>
         <!-- Comparison Start -->
         <div class="container-xxl py-5">
             <div class="container px-lg-5">
@@ -686,7 +750,8 @@
                             &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
 
 
-                            Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns Company</a>
+                            Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
+                                Company</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
