--- a/index.html
+++ b/index.html
@@ -68,15 +68,14 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
-<<<<<<< HEAD
-                                <a href="team.html" class="dropdown-item">Open Plots</a>
-                                <a href="testimonial.html" class="dropdown-item">Farm-Lands</a>
-                                <a href="comparison.html" class="dropdown-item">Investment</a>
-=======
-                                <a href="./open-plots.html" class="dropdown-item">Open Plots</a>
-                                <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
-                                <a href="./investements.html" class="dropdown-item">Investment</a>
->>>>>>> 6c114d0030fcf5eae6e01d89e8a616a2032b487d
+                                <<<<<<< HEAD <a href="team.html" class="dropdown-item">Open Plots</a>
+                                    <a href="testimonial.html" class="dropdown-item">Farm-Lands</a>
+                                    <a href="comparison.html" class="dropdown-item">Investment</a>
+                                    =======
+                                    <a href="./open-plots.html" class="dropdown-item">Open Plots</a>
+                                    <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
+                                    <a href="./investements.html" class="dropdown-item">Investment</a>
+                                    >>>>>>> 6c114d0030fcf5eae6e01d89e8a616a2032b487d
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -491,12 +490,9 @@
                             style="width: 45px; height: 45px; margin-top: -3px;">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
-<<<<<<< HEAD
-                        <p class="mt-3">This Company has good collection of  projects and staff was very friendly and given very detailed explanation of Plots.Raja Roy Promotors exceeded our expectations in finding our dream home.</p>
-=======
                         <p class="mt-3">This Company has good collection of projects and staff was very friendly and
-                            given very detailed explanation of Plots.</p>
->>>>>>> 6c114d0030fcf5eae6e01d89e8a616a2032b487d
+                            given very detailed explanation of Plots.Raja Roy Promotors exceeded our expectations in
+                            finding our dream home.</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/client3.jpg"
                                 style="width: 50px; height: 50px;">
@@ -513,10 +509,10 @@
                             style="width: 45px; height: 45px; margin-top: -3px;">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
-<<<<<<< HEAD
-                        <p class="mt-3">Padma sri helped me to choose good Plot. Really a budget friendly Company. Prices are affordable to buy the Plots & other services, for all Excellent service.
+                        <p class="mt-3">Padma sri helped me to choose good Plot. Really a budget friendly Company.
+                            Prices are affordable to buy the Plots & other services, for all Excellent service.
 
-                            </p>
+                        </p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/client2.jpg"
                                 style="width: 50px; height: 50px;">
@@ -532,73 +528,47 @@
                             style="width: 45px; height: 45px; margin-top: -3px;">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
-                        <p class="mt-3">I have been an investor with Raja Roy Promotors , and I am extremely pleased with my experience. From the very beginning, the company has demonstrated a commitment to excellence.</p>
-=======
-                        <p class="mt-3">Padma sri helped me to choose good Plot. Really a budget friendly Company.
-                            Prices are affordable to buy the Plots & other services, for all Excellent service.</p>
->>>>>>> 6c114d0030fcf5eae6e01d89e8a616a2032b487d
+                        <p class="mt-3">I have been an investor with Raja Roy Promotors , and I am extremely pleased
+                            with my experience. From the very beginning, the company has demonstrated a commitment to
+                            excellence.</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/client01.jpg"
                                 style="width: 50px; height: 50px;">
                             <div class="ps-3">
-<<<<<<< HEAD
                                 <h6 class="fw-bold mb-1">Tejeshwara Rao</h6>
                                 <small> Invester</small>
                             </div>
                         </div>
                     </div>
-                    
-=======
-                                <h6 class="fw-bold mb-1">KAMALA</h6>
-                                <small>customer</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div
-                        class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 mt-4">
-                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
-                            style="width: 45px; height: 45px; margin-top: -3px;">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                        <p class="mt-3">I have been an investor with Raja Roy Promotors , and I am extremely pleased
-                            with my experience. From the very beginning, the company has demonstrated a commitment to
-                            excellence, transparency, and value creation.</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-4.jpg"
-                                style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Tejeshwara Rao</h6>
-                                <small>Invester</small>
-                            </div>
->>>>>>> 6c114d0030fcf5eae6e01d89e8a616a2032b487d
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
-        <!-- Testimonial End -->
+    </div>
+    </div>
+    <!-- Testimonial End -->
 
 
-        <div class="container-xxl pt-5 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="container">
-                <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
-                    data-wow-delay="0.1s" style="max-width: 600px;">
+    <div class="container-xxl pt-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
+                data-wow-delay="0.1s" style="max-width: 600px;">
 
-                    <h3 class="mb-1">Our Location</h3>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15220.950548588293!2d78.363599!3d17.496166!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb92142fffffff%3A0xabf8f98d7db14bd2!2sRAJA%20ROY%20PRAMOTORS!5e0!3m2!1sen!2sus!4v1710506257969!5m2!1sen!2sus"
-                            style="border:0;" width="100%" height="500px" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
+                <h3 class="mb-1">Our Location</h3>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15220.950548588293!2d78.363599!3d17.496166!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb92142fffffff%3A0xabf8f98d7db14bd2!2sRAJA%20ROY%20PRAMOTORS!5e0!3m2!1sen!2sus!4v1710506257969!5m2!1sen!2sus"
+                        style="border:0;" width="100%" height="500px" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- Team Start -->
-        <!-- <div class="container-xxl py-5">
+    <!-- Team Start -->
+    <!-- <div class="container-xxl py-5">
             <div class="container px-lg-5">
                 <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
                     data-wow-delay="0.1s" style="max-width: 600px;">
@@ -678,84 +648,83 @@
                 </div>
             </div>
         </div> -->
-        <!-- Team End -->
+    <!-- Team End -->
 
 
-        <!-- Footer Start -->
-        <div class="container-fluid bg-primary text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="over"></div>
-            <div class="container py-5 px-lg-5">
-                <div class="row gy-5 gx-4 pt-5">
+    <!-- Footer Start -->
+    <div class="container-fluid bg-primary text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="over"></div>
+        <div class="container py-5 px-lg-5">
+            <div class="row gy-5 gx-4 pt-5">
 
-                    <div class="col-lg-8 col-md-12">
-                        <div class="row gy-5 g-4">
-                            <div class="col-md-6">
-                                <h5 class="fw-bold text-white mb-4">Our links</h5>
-                                <a class="btn btn-link" href="">Home </a>
-                                <a class="btn btn-link" href="">About </a>
-                                <a class="btn btn-link" href="">Services</a>
-                                <a class="btn btn-link" href="">Gallery</a>
-                                <a class="btn btn-link" href="">Contact</a>
-                                <!-- <a class="btn btn-link" href="">Support</a> -->
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="fw-bold text-white mb-4">Our Services</h5>
-                                <a class="btn btn-link" href="">Domain Register</a>
-                                <a class="btn btn-link" href="">Shared Hosting</a>
-                                <a class="btn btn-link" href="">VPS Hosting</a>
-                                <a class="btn btn-link" href="">Dedicated Hosting</a>
-                                <a class="btn btn-link" href="">Reseller Hosting</a>
-                            </div>
+                <div class="col-lg-8 col-md-12">
+                    <div class="row gy-5 g-4">
+                        <div class="col-md-6">
+                            <h5 class="fw-bold text-white mb-4">Our links</h5>
+                            <a class="btn btn-link" href="">Home </a>
+                            <a class="btn btn-link" href="">About </a>
+                            <a class="btn btn-link" href="">Services</a>
+                            <a class="btn btn-link" href="">Gallery</a>
+                            <a class="btn btn-link" href="">Contact</a>
+                            <!-- <a class="btn btn-link" href="">Support</a> -->
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="fw-bold text-white mb-4">Our Services</h5>
+                            <a class="btn btn-link" href="">Domain Register</a>
+                            <a class="btn btn-link" href="">Shared Hosting</a>
+                            <a class="btn btn-link" href="">VPS Hosting</a>
+                            <a class="btn btn-link" href="">Dedicated Hosting</a>
+                            <a class="btn btn-link" href="">Reseller Hosting</a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4">
-                        <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
-                            MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8885667888</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajaroypramotors21@gmail.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="https://twitter.com/RR_Pramotors"><i
-                                    class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.facebook.com/RajaRoyPramotors21"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.instagram.com/raja_roy_pramotors/"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-
                 </div>
+                <div class="col-md-6 col-lg-4">
+                    <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
+                        MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8885667888</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajaroypramotors21@gmail.com</p>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-outline-light btn-social" href="https://twitter.com/RR_Pramotors"><i
+                                class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social"
+                            href="https://www.facebook.com/RajaRoyPramotors21"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+
+                        <a class="btn btn-outline-light btn-social"
+                            href="https://www.instagram.com/raja_roy_pramotors/"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+
             </div>
-            <div class="container px-lg-5">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
+        </div>
+        <div class="container px-lg-5">
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
 
 
-                            Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
-                                Company</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
-                                <a href="">FQAs</a>
-                            </div>
+                        Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
+                            Company</a>
+                    </div>
+                    <div class="col-md-6 text-center text-md-end">
+                        <div class="footer-menu">
+                            <a href="">Home</a>
+                            <a href="">Cookies</a>
+                            <a href="">Help</a>
+                            <a href="">FQAs</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Footer End -->
+    </div>
+    <!-- Footer End -->
 
 
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
 
     <!-- JavaScript Libraries -->
