--- a/index.html
+++ b/index.html
@@ -68,14 +68,12 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
-                                <<<<<<< HEAD <a href="team.html" class="dropdown-item">Open Plots</a>
-                                    <a href="testimonial.html" class="dropdown-item">Farm-Lands</a>
-                                    <a href="comparison.html" class="dropdown-item">Investment</a>
-                                    =======
-                                    <a href="./open-plots.html" class="dropdown-item">Open Plots</a>
-                                    <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
-                                    <a href="./investements.html" class="dropdown-item">Investment</a>
-                                    >>>>>>> 6c114d0030fcf5eae6e01d89e8a616a2032b487d
+
+
+                                <a href="./open-plots.html" class="dropdown-item">Open Plots</a>
+                                <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
+                                <a href="./investments.html" class="dropdown-item">Investment</a>
+
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -661,20 +659,20 @@
                     <div class="row gy-5 g-4">
                         <div class="col-md-6">
                             <h5 class="fw-bold text-white mb-4">Our links</h5>
-                            <a class="btn btn-link" href="">Home </a>
-                            <a class="btn btn-link" href="">About </a>
-                            <a class="btn btn-link" href="">Services</a>
-                            <a class="btn btn-link" href="">Gallery</a>
-                            <a class="btn btn-link" href="">Contact</a>
+                            <a class="btn btn-link" href="/">Home </a>
+                            <a class="btn btn-link" href="./about.html">About </a>
+
+                            <a class="btn btn-link" href="./gallery.html">Gallery</a>
+                            <a class="btn btn-link" href="./contact.html">Contact</a>
                             <!-- <a class="btn btn-link" href="">Support</a> -->
                         </div>
                         <div class="col-md-6">
                             <h5 class="fw-bold text-white mb-4">Our Services</h5>
-                            <a class="btn btn-link" href="">Domain Register</a>
-                            <a class="btn btn-link" href="">Shared Hosting</a>
-                            <a class="btn btn-link" href="">VPS Hosting</a>
-                            <a class="btn btn-link" href="">Dedicated Hosting</a>
-                            <a class="btn btn-link" href="">Reseller Hosting</a>
+                            <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
+                            <a class="btn btn-link" href="./farm-lands.html">Form-Lands</a>
+                            <a class="btn btn-link" href="./investments.html">Investments</a>
+                            <a class="btn btn-link" href="">Projects</a>
+
                         </div>
                     </div>
                 </div>
@@ -685,14 +683,15 @@
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8885667888</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajaroypramotors21@gmail.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href="https://twitter.com/RR_Pramotors"><i
-                                class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social"
-                            href="https://www.facebook.com/RajaRoyPramotors21"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://twitter.com/RR_Pramotors"
+                            target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/RajaRoyPramotors21"
+                            target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"
+                                target="_blank"></i></a>
 
-                        <a class="btn btn-outline-light btn-social"
-                            href="https://www.instagram.com/raja_roy_pramotors/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/raja_roy_pramotors/"
+                            target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
 
@@ -710,7 +709,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="">Home</a>
+                            <a href="/">Home</a>
                             <a href="">Cookies</a>
                             <a href="">Help</a>
                             <a href="">FQAs</a>
